# frida-core

./: config.h.meson  meson.build  meson_options.txt
lib/: meson.build
lib/agent/: meson.build
lib/interfaces/: meson.build
lib/pipe/: meson.build
server/: meson.build
src/: meson.build
src/api/: meson.build
tests/: meson.build
tests/labrats/: meson.build
